<resources>
    <string name="app_name">健康助手</string>
    <string name="transition_image">trasitionImage</string>
    <string name="health_classify">健康信息分类</string>
    <string name="select_page">选择页码</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="transition_reveal">transitionReveal</string>
    <string name="drug_search">药品搜索</string>
    <string name="drug_collection">药品收藏</string>
    <string name="drug_remind">用药提醒</string>
    <string name="scan_code">扫描条形码</string>
    <string name="drug_sacn">药品扫描</string>
    <string name="loading_data">正在加载数据</string>
    <string name="single">单次</string>
    <string name="repeat">重复</string>
    <string name="date">日期:</string>
    <string name="time">时间:</string>
    <string name="ensure">确定</string>
    <string name="department">病状科室</string>
    <string name="type">类型:</string>
    <string name="recommend_drug">推荐用药</string>

</resources>
