<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_drug_search"
            android:icon="@drawable/ic_search"
            android:title="@string/drug_search"/>
        <item
            android:id="@+id/nav_drug_collect"
            android:icon="@drawable/ic_favorite"
            android:title="@string/drug_collection"/>
        <item
            android:id="@+id/nav_drug_remind"
            android:icon="@drawable/ic_alarm"
            android:title="@string/drug_remind"/>
        <item
            android:id="@+id/nav_drug_scan"
            android:icon="@drawable/ic_scan"
            android:title="@string/drug_sacn"/>
    </group>
</menu>